--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <body class="container_login">
         <div class='flex_column'>
             <div class="flex heading_div">
-                <img src="../public/images/workos-logo-with-text.png" alt="workos logo">
+                <img src="../public/images/Wlgbar.jpg" alt="will dersh logo">
             </div>
             <h2>Node.js SSO Example App</h2>
             <a class="button login_button" href="/login">Login</a>
