--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -128,9 +128,9 @@ body {
 
 
 .button {
-  background-color: #6363f1;
-  border: 2px solid #6363f1;
-  border-radius: 26px;
+  background-color: #2A4E6E;
+  border: 2px solid #2A4E6E;
+  border-radius: 10px;
   color: white;
   padding: 8px 16px;
   text-align: center;
@@ -145,7 +145,7 @@ body {
 
 .button-outline {
   background-color: #f9f9fb;
-  color: #6363f1;
+  color: #2A4E6E;
   padding: 8px 16px;
 }
 
@@ -165,7 +165,7 @@ body {
 }
 
 .login_button {
-  width: 95%;
+  width: 70%;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
