--- a/views/login_successful.ejs
+++ b/views/login_successful.ejs
@@ -22,12 +22,11 @@
         <div class='flex'>
             <div class="logged_in_div_left">
                 <div class="title-text">
-                    <h1>Your app,</h1>
-                    <h2 class="home-hero-gradient">Enterprise Ready</h2>
+                    <h1>Welcome to</h1>
+                    <h2 class="home-hero-gradient">your app <%=first_name%> <%=last_name%>!</h2>
                 </div>
                 <div class="title-subtext">
-                    <p>Start selling to enterprise customers with just a few lines of code.</p>
-                    <p>Implement features like single sign-on in minutes instead of months.</p>
+                    <p>SSO is now successfully set up.</p>
                 </div>
                 <div class="flex success-buttons">
                     <a href="https://workos.com/signup" target="_blank"><button class='button'>Get Started</button></a>
@@ -39,7 +38,7 @@
             <div class="logged_in_div_right">
                 <div class="flex_column">
                     <div class="flex width-75 space-between">
-                        <h2>Raw Profile Response Details</h2>
+                        <h2>Raw Profile Response Details for <%=first_name%> <%=last_name%></h2>
                         <a href="/logout"><button class="button button-outline">Log Out</button></a>
                     </div>
                     <div class="text_box">
